Fixes footer alignment

--- a/source/stylesheets/components/_footer.css.sass
+++ b/source/stylesheets/components/_footer.css.sass
@@ -65,7 +65,7 @@ footer#footer
     max-width: rem(400)
     height: auto
     border: rem(2) solid white
-    margin-top: rem(30)
+    margin: rem(30) 0 0 0
     img
       width: 100%
     &.footer-logo
